Rename precompile and pallet crates

--- a/crates/humanode-runtime/Cargo.toml
+++ b/crates/humanode-runtime/Cargo.toml
@@ -29,17 +29,17 @@ pallet-erc20-support = { path = "../pallet-erc20-support", default-features = fa
 pallet-ethereum-chain-id = { path = "../pallet-ethereum-chain-id", default-features = false }
 pallet-evm-accounts-mapping = { path = "../pallet-evm-accounts-mapping", default-features = false }
 pallet-evm-balances = { path = "../pallet-evm-balances", default-features = false }
-pallet-evm-swap = { path = "../pallet-evm-swap", default-features = false }
 pallet-evm-system = { path = "../pallet-evm-system", default-features = false }
 pallet-humanode-offences = { path = "../pallet-humanode-offences", default-features = false }
 pallet-humanode-session = { path = "../pallet-humanode-session", default-features = false }
+pallet-native-to-evm-swap = { path = "../pallet-native-to-evm-swap", default-features = false }
 pallet-pot = { path = "../pallet-pot", default-features = false }
 pallet-token-claims = { path = "../pallet-token-claims", default-features = false }
 pallet-vesting = { path = "../pallet-vesting", default-features = false }
 precompile-bioauth = { path = "../precompile-bioauth", default-features = false }
 precompile-bls12381 = { path = "../precompile-bls12381", default-features = false }
 precompile-evm-accounts-mapping = { path = "../precompile-evm-accounts-mapping", default-features = false }
-precompile-evm-swap = { path = "../precompile-evm-swap", default-features = false }
+precompile-evm-to-native-swap = { path = "../precompile-evm-to-native-swap", default-features = false }
 precompile-native-currency = { path = "../precompile-native-currency", default-features = false }
 precompile-utils = { path = "../precompile-utils", default-features = false }
 primitives-auth-ticket = { path = "../primitives-auth-ticket", default-features = false }
@@ -127,12 +127,12 @@ runtime-benchmarks = [
   "pallet-currency-swap/runtime-benchmarks",
   "pallet-ethereum/runtime-benchmarks",
   "pallet-evm-accounts-mapping/runtime-benchmarks",
-  "pallet-evm-swap/runtime-benchmarks",
   "pallet-evm/runtime-benchmarks",
   "pallet-grandpa/runtime-benchmarks",
   "pallet-humanode-session/runtime-benchmarks",
   "pallet-im-online/runtime-benchmarks",
   "pallet-multisig/runtime-benchmarks",
+  "pallet-native-to-evm-swap/runtime-benchmarks",
   "pallet-sudo/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-token-claims/runtime-benchmarks",
@@ -186,13 +186,13 @@ std = [
   "pallet-evm-precompile-simple/std",
   "pallet-evm/std",
   "pallet-evm-balances/std",
-  "pallet-evm-swap/std",
   "pallet-evm-system/std",
   "pallet-grandpa/std",
   "pallet-humanode-offences/std",
   "pallet-humanode-session/std",
   "pallet-im-online/std",
   "pallet-multisig/std",
+  "pallet-native-to-evm-swap/std",
   "pallet-pot/std",
   "pallet-session/std",
   "pallet-sudo/std",
@@ -205,7 +205,7 @@ std = [
   "precompile-bioauth/std",
   "precompile-bls12381/std",
   "precompile-evm-accounts-mapping/std",
-  "precompile-evm-swap/std",
+  "precompile-evm-to-native-swap/std",
   "precompile-native-currency/std",
   "precompile-utils/std",
   "primitives-auth-ticket/std",
@@ -258,13 +258,13 @@ try-runtime = [
   "pallet-evm-accounts-mapping/try-runtime",
   "pallet-evm/try-runtime",
   "pallet-evm-balances/try-runtime",
-  "pallet-evm-swap/try-runtime",
   "pallet-evm-system/try-runtime",
   "pallet-grandpa/try-runtime",
   "pallet-humanode-offences/try-runtime",
   "pallet-humanode-session/try-runtime",
   "pallet-im-online/try-runtime",
   "pallet-multisig/try-runtime",
+  "pallet-native-to-evm-swap/try-runtime",
   "pallet-pot/try-runtime",
   "pallet-session/try-runtime",
   "pallet-sudo/try-runtime",
