--- a/utils/checks/snapshots/features.yaml
+++ b/utils/checks/snapshots/features.yaml
@@ -1984,10 +1984,6 @@
 - name: pallet-evm-precompile-simple 2.0.0-dev
   features:
     - std
-- name: pallet-evm-swap 0.1.0
-  features:
-    - default
-    - std
 - name: pallet-evm-system 0.1.0
   features:
     - default
@@ -2011,6 +2007,10 @@
     - std
 - name: pallet-multisig 4.0.0-dev
   features:
+    - std
+- name: pallet-native-to-evm-swap 0.1.0
+  features:
+    - default
     - std
 - name: pallet-pot 0.1.0
   features:
@@ -2164,7 +2164,7 @@
   features:
     - default
     - std
-- name: precompile-evm-swap 0.1.0
+- name: precompile-evm-to-native-swap 0.1.0
   features:
     - default
     - std
