--- a/crates/precompile-evm-to-native-swap/Cargo.toml
+++ b/crates/precompile-evm-to-native-swap/Cargo.toml
@@ -1,18 +1,16 @@
 [package]
-name = "pallet-evm-swap"
+name = "precompile-evm-to-native-swap"
 version = "0.1.0"
 edition = "2021"
 publish = false
 
 [dependencies]
+precompile-utils = { path = "../precompile-utils", default-features = false }
+
 codec = { workspace = true, features = ["derive"] }
-ethereum = { workspace = true }
-fp-ethereum = { workspace = true }
 fp-evm = { workspace = true }
 frame-support = { workspace = true }
-frame-system = { workspace = true }
 num_enum = { workspace = true }
-pallet-ethereum = { workspace = true }
 pallet-evm = { workspace = true }
 scale-info = { workspace = true, features = ["derive"] }
 sp-core = { workspace = true }
@@ -21,43 +19,27 @@ sp-core = { workspace = true }
 pallet-evm-balances = { path = "../pallet-evm-balances", features = ["default"] }
 pallet-evm-system = { path = "../pallet-evm-system", features = ["default"] }
 
-assert_matches = { workspace = true }
+frame-system = { workspace = true }
 hex-literal = { workspace = true }
+mockall = { workspace = true }
 pallet-balances = { workspace = true, features = ["default"] }
+pallet-evm = { workspace = true }
 pallet-timestamp = { workspace = true, features = ["default"] }
 
 [features]
 default = ["std"]
-runtime-benchmarks = [
-  "frame-support/runtime-benchmarks",
-  "frame-system/runtime-benchmarks",
-  "pallet-balances/runtime-benchmarks",
-  "pallet-ethereum/runtime-benchmarks",
-  "pallet-evm/runtime-benchmarks",
-  "pallet-timestamp/runtime-benchmarks",
-]
 std = [
   "codec/std",
-  "ethereum/std",
-  "fp-ethereum/std",
   "fp-evm/std",
   "frame-support/std",
   "frame-system/std",
   "num_enum/std",
   "pallet-balances/std",
-  "pallet-ethereum/std",
+  "pallet-evm-balances/std",
+  "pallet-evm-system/std",
   "pallet-evm/std",
   "pallet-timestamp/std",
+  "precompile-utils/std",
   "scale-info/std",
   "sp-core/std",
-]
-try-runtime = [
-  "frame-support/try-runtime",
-  "frame-system/try-runtime",
-  "pallet-balances/try-runtime",
-  "pallet-ethereum/try-runtime",
-  "pallet-evm-balances/try-runtime",
-  "pallet-evm-system/try-runtime",
-  "pallet-evm/try-runtime",
-  "pallet-timestamp/try-runtime",
 ]
