--- a/utils/checks/snapshots/features.yaml
+++ b/utils/checks/snapshots/features.yaml
@@ -2008,6 +2008,10 @@
 - name: pallet-multisig 4.0.0-dev
   features:
     - std
+- name: pallet-native-to-evm-swap 0.1.0
+  features:
+    - default
+    - std
 - name: pallet-pot 0.1.0
   features:
     - default
@@ -2156,11 +2160,11 @@
   features:
     - default
     - std
-- name: precompile-currency-swap 0.1.0
+- name: precompile-evm-accounts-mapping 0.1.0
   features:
     - default
     - std
-- name: precompile-evm-accounts-mapping 0.1.0
+- name: precompile-evm-to-native-swap 0.1.0
   features:
     - default
     - std
