Add paste dependency

--- a/crates/pallet-evm-balances/Cargo.toml
+++ b/crates/pallet-evm-balances/Cargo.toml
@@ -18,6 +18,7 @@ pallet-evm-system = { path = "../pallet-evm-system", features = ["default"] }
 fp-evm = { workspace = true }
 pallet-evm = { workspace = true }
 pallet-timestamp = { workspace = true }
+paste = { workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
 
