--- a/crates/pallet-native-to-evm-swap/Cargo.toml
+++ b/crates/pallet-native-to-evm-swap/Cargo.toml
@@ -9,6 +9,7 @@ codec = { workspace = true, features = ["derive"] }
 ethereum = { workspace = true }
 fp-ethereum = { workspace = true }
 fp-evm = { workspace = true }
+frame-benchmarking = { workspace = true, optional = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
 num_enum = { workspace = true }
@@ -29,6 +30,7 @@ pallet-timestamp = { workspace = true, features = ["default"] }
 [features]
 default = ["std"]
 runtime-benchmarks = [
+  "frame-benchmarking/runtime-benchmarks",
   "frame-support/runtime-benchmarks",
   "frame-system/runtime-benchmarks",
   "pallet-balances/runtime-benchmarks",
