Use constants instead of fn

--- a/crates/pallet-evm-balances/Cargo.toml
+++ b/crates/pallet-evm-balances/Cargo.toml
@@ -16,6 +16,7 @@ sp-std = { workspace = true }
 pallet-evm-system = { path = "../pallet-evm-system", features = ["default"] }
 
 fp-evm = { workspace = true }
+hex-literal = { workspace = true }
 pallet-evm = { workspace = true }
 pallet-timestamp = { workspace = true }
 paste = { workspace = true }
