Fungible conformance Inspect and Mutate test for `pallet-evm-balances` (#1507)
* Add paste dependency

* Add fungible conformance tests macro

* Adapt mock env to make conformance tests work

* Use constants instead of fn

--- a/crates/pallet-evm-balances/Cargo.toml
+++ b/crates/pallet-evm-balances/Cargo.toml
@@ -16,8 +16,10 @@ sp-std = { workspace = true }
 pallet-evm-system = { path = "../pallet-evm-system", features = ["default"] }
 
 fp-evm = { workspace = true }
+hex-literal = { workspace = true }
 pallet-evm = { workspace = true }
 pallet-timestamp = { workspace = true }
+paste = { workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
 
