--- a/crates/pallet-evm-system/Cargo.toml
+++ b/crates/pallet-evm-system/Cargo.toml
@@ -14,6 +14,7 @@ sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 
 [dev-dependencies]
+hex-literal = { workspace = true }
 mockall = { workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
