--- a/deny.toml
+++ b/deny.toml
@@ -30,6 +30,10 @@ ignore = [
   "RUSTSEC-2024-0421",
   # TODO(#1478): update the ring internal dependency to 0.17.12+
   "RUSTSEC-2025-0009",
+  # TODO(#1541): update the wasmtime internal dependency to 24.0.2+
+  "RUSTSEC-2023-0091",
+  # TODO(#1542): update the wasmtime internal dependency to 24.0.2+
+  "RUSTSEC-2024-0438",
 ]
 
 [licenses]
