Add evm-tracing feature to humanode-runtime

--- a/crates/humanode-runtime/Cargo.toml
+++ b/crates/humanode-runtime/Cargo.toml
@@ -112,6 +112,7 @@ sp-keystore = { workspace = true }
 
 [features]
 default = ["std"]
+evm-tracing = []
 runtime-benchmarks = [
   "frame-benchmarking/runtime-benchmarks",
   "frame-support/runtime-benchmarks",
