--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: build
 
 on:
   push:
+    branches:
+      - "*"
     tags:
       - "v*.*.*"
   schedule:
@@ -137,26 +139,26 @@ jobs:
           asset_name: ${{ steps.set-upload-params.outputs.artifact-name }}.tar.gz
           asset_path: archive.tar.gz
 
-  publish-release:
-    needs:
-      - draft-release
-      - build
-    name: Publish release
-    if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-24.04
-    timeout-minutes: 50
-    permissions:
-      contents: write
-    steps:
-      - name: Publish release
-        uses: actions/github-script@v7
-        env:
-          RELEASE_ID: ${{ needs.draft-release.outputs.release-id }}
-        with:
-          script: |
-            github.rest.repos.updateRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: process.env.RELEASE_ID,
-              draft: false
-            });
+  # publish-release:
+  #   needs:
+  #     - draft-release
+  #     - build
+  #   name: Publish release
+  #   if: startsWith(github.ref, 'refs/tags/')
+  #   runs-on: ubuntu-24.04
+  #   timeout-minutes: 50
+  #   permissions:
+  #     contents: write
+  #   steps:
+  #     - name: Publish release
+  #       uses: actions/github-script@v7
+  #       env:
+  #         RELEASE_ID: ${{ needs.draft-release.outputs.release-id }}
+  #       with:
+  #         script: |
+  #           github.rest.repos.updateRelease({
+  #             owner: context.repo.owner,
+  #             repo: context.repo.repo,
+  #             release_id: process.env.RELEASE_ID,
+  #             draft: false
+  #           });
