Skip bash tests for evm-tracing test suite

--- a/.github/workflows/code.yml
+++ b/.github/workflows/code.yml
@@ -82,6 +82,7 @@ jobs:
             skip-ts-tests: true
           - suite: "evm-tracing"
             build-args: "--features evm-tracing"
+            skip-bash-tests: true
       fail-fast: false
     name: End-to-end tests / ${{ matrix.test.suite }}
     runs-on: ubuntu-24.04
