[evm-tracing-0] add evm-tracing test suite to e2e ts tests (#1574)
* Add build for evm-tracing at e2e code job

* Skip bash tests for evm-tracing test suite

* Add template for evm-tracing test suite

--- a/.github/workflows/code.yml
+++ b/.github/workflows/code.yml
@@ -80,6 +80,9 @@ jobs:
           - suite: "try-runtime"
             build-args: "--features try-runtime"
             skip-ts-tests: true
+          - suite: "evm-tracing"
+            build-args: "--features evm-tracing"
+            skip-bash-tests: true
       fail-fast: false
     name: End-to-end tests / ${{ matrix.test.suite }}
     runs-on: ubuntu-24.04
