--- a/utils/checks/snapshots/features.yaml
+++ b/utils/checks/snapshots/features.yaml
@@ -851,6 +851,8 @@
   features:
     - default
     - std
+- name: evm-tracing-client 0.1.0
+  features: []
 - name: evm-tracing-events 0.1.0
   features:
     - default
@@ -1257,6 +1259,7 @@
   features:
     - alloc
     - default
+    - serde
     - std
 - name: hex-literal 0.4.1
   features: []
