[evm-tracing-3] implement RPC side (#1568)
Implement RPC side

--- a/utils/checks/snapshots/features.yaml
+++ b/utils/checks/snapshots/features.yaml
@@ -862,6 +862,8 @@
   features:
     - default
     - std
+- name: evm-tracing-rpc 0.1.0
+  features: []
 - name: exit-future 0.2.0
   features: []
 - name: expander 1.0.0
