Integrate pallet-fixed-validators-set into humanode-runtime

--- a/crates/humanode-runtime/Cargo.toml
+++ b/crates/humanode-runtime/Cargo.toml
@@ -32,6 +32,7 @@ pallet-ethereum-chain-id = { path = "../pallet-ethereum-chain-id", default-featu
 pallet-evm-accounts-mapping = { path = "../pallet-evm-accounts-mapping", default-features = false }
 pallet-evm-balances = { path = "../pallet-evm-balances", default-features = false }
 pallet-evm-system = { path = "../pallet-evm-system", default-features = false }
+pallet-fixed-validators-set = { path = "../pallet-fixed-validators-set", default-features = false }
 pallet-humanode-offences = { path = "../pallet-humanode-offences", default-features = false }
 pallet-humanode-session = { path = "../pallet-humanode-session", default-features = false }
 pallet-native-to-evm-swap = { path = "../pallet-native-to-evm-swap", default-features = false }
@@ -131,6 +132,7 @@ runtime-benchmarks = [
   "pallet-ethereum/runtime-benchmarks",
   "pallet-evm-accounts-mapping/runtime-benchmarks",
   "pallet-evm/runtime-benchmarks",
+  "pallet-fixed-validators-set/runtime-benchmarks",
   "pallet-grandpa/runtime-benchmarks",
   "pallet-humanode-session/runtime-benchmarks",
   "pallet-im-online/runtime-benchmarks",
@@ -192,6 +194,7 @@ std = [
   "pallet-evm/std",
   "pallet-evm-balances/std",
   "pallet-evm-system/std",
+  "pallet-fixed-validators-set/std",
   "pallet-grandpa/std",
   "pallet-humanode-offences/std",
   "pallet-humanode-session/std",
@@ -264,6 +267,7 @@ try-runtime = [
   "pallet-evm/try-runtime",
   "pallet-evm-balances/try-runtime",
   "pallet-evm-system/try-runtime",
+  "pallet-fixed-validators-set/try-runtime",
   "pallet-grandpa/try-runtime",
   "pallet-humanode-offences/try-runtime",
   "pallet-humanode-session/try-runtime",
