--- a/utils/checks/snapshots/features.yaml
+++ b/utils/checks/snapshots/features.yaml
@@ -3358,7 +3358,8 @@
     - rand
     - spanish
 - name: tiny-bip39 2.0.0
-  features: []
+  features:
+    - rand
 - name: tiny-keccak 2.0.2
   features:
     - default
