--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ serde = { version = "1", default-features = false }
 serde_json = { version = "1", default-features = false }
 sha3 = { version = "0.10", default-features = false }
 similar-asserts = { version = "1", default-features = false }
+smallvec = { version = "1.13", default-features = false }
 static_assertions = { version = "1", default-features = false }
 syn = { version = "2", default-features = false }
 thiserror = { version = "1.0.69", default-features = false }
