--- a/crates/evm-tracing-events/Cargo.toml
+++ b/crates/evm-tracing-events/Cargo.toml
@@ -10,6 +10,7 @@ environmental = { workspace = true }
 evm = { workspace = true, features = ["with-codec"] }
 evm-gasometer = { workspace = true }
 evm-runtime = { workspace = true }
+smallvec = { workspace = true }
 sp-core = { workspace = true }
 sp-runtime-interface = { workspace = true }
 
