Temporarily ignore RUSTSEC-2025-0118

--- a/deny.toml
+++ b/deny.toml
@@ -36,6 +36,8 @@ ignore = [
   "RUSTSEC-2024-0438",
   # TODO(#1612): update the tracing-subscriber internal dependency to 0.3.20+
   "RUSTSEC-2025-0055",
+  # TODO(#1648): update the wasmtime internal dependency to 24.0.5+
+  "RUSTSEC-2025-0118",
 ]
 
 [licenses]
