--- a/utils/checks/snapshots/features.yaml
+++ b/utils/checks/snapshots/features.yaml
@@ -818,6 +818,7 @@
     - scale-info
     - serde
     - std
+    - tracing
     - with-codec
     - with-serde
 - name: evm-core 0.39.0
@@ -832,6 +833,7 @@
   features:
     - environmental
     - std
+    - tracing
 - name: evm-nonces-recovery 0.1.0
   features:
     - default
@@ -840,6 +842,28 @@
   features:
     - environmental
     - std
+    - tracing
+- name: evm-tracer 0.1.0
+  features:
+    - default
+    - std
+- name: evm-tracing-api 0.1.0
+  features:
+    - default
+    - std
+- name: evm-tracing-client 0.1.0
+  features: []
+- name: evm-tracing-events 0.1.0
+  features:
+    - default
+    - evm-tracing
+    - std
+- name: evm-tracing-host-api 0.1.0
+  features:
+    - default
+    - std
+- name: evm-tracing-rpc 0.1.0
+  features: []
 - name: exit-future 0.2.0
   features: []
 - name: expander 1.0.0
@@ -1237,6 +1261,7 @@
   features:
     - alloc
     - default
+    - serde
     - std
 - name: hex-literal 0.4.1
   features: []
@@ -1283,6 +1308,7 @@
 - name: humanode-runtime 0.1.0
   features:
     - default
+    - evm-tracer
     - frame-try-runtime
     - serde
     - std
