Update typos config

--- a/typos.toml
+++ b/typos.toml
@@ -1,10 +1,15 @@
 [default]
 extend-ignore-identifiers-re = [".+HDNode.*"]
+extend-ignore-re = ["dyn-clonable"]
 
 [default.extend-identifiers]
-# Substrate choices we can't / won't change.
-"Applyable" = "Applyable"
-"assert_applyable_validate_all_transaction_sources" = "assert_applyable_validate_all_transaction_sources"
-"prepare_applyable_data" = "prepare_applyable_data"
 # DEFLATE
 "flate2" = "flate2"
+
+[default.extend-words]
+"inherents" = "inherents"
+
+"dyn-clonable" = "dyn-clonable"
+
+# Substrate choices we can't / won't change.
+"Applyable" = "Applyable"
