--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ num-traits = { version = "0.2", default-features = false }
 num_enum = { version = "0.7", default-features = false }
 numtoa = { version = "0.2", default-features = false }
 once_cell = { version = "1", default-features = false }
-paste = { version = "1.0", default-features = false }
+paste = { version = "0.2", package = "pastey", default-features = false }
 proc-macro2 = { version = "1", default-features = false }
 qr2term = { version = "0.3", default-features = false }
 quote = { version = "1.0", default-features = false }
